--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
   #page{
-    background-color: antiquewhite;
+    background-color: rgb(250, 176, 222);
     
     
   } 
@@ -8,12 +8,42 @@
     
    }
    .container{
+    margin-top: 70px;
     padding-right: 300px;
    }
 
   
    #image{
+    margin-top: 60px;
     width: 500px;
-    height: 520px;
+    height: 500px;
     margin-left: 30%;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 8px;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  padding-left: 450px;
+  padding-top: 20px;
+}
+
+button{
+  width: 150px;
+  background-color: rgb(6, 6, 7);
+  color: #ffffff;
+  border: none;
+  padding: 12px;
+  margin: 3px;
+  border-radius: 5px;
+  float: right;
 }
